--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- fonts awesome -->
+    <script src="https://kit.fontawesome.com/71bcdad960.js" crossorigin="anonymous"></script>
   </body>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
